style.css
* {
  margin: 0;
  padding: 0;
  font-family: "Roboto", sans-serif;
  /* Next time add box-sizing: border-box to css reset settings above */
}

body {
}

.header-inner-container,
.card-inner-container,
.quotes-inner-container,
.call-to-action {
  width: 1028px;
}
header {
  background-color: #1f2937;
  color: #e5e7eb;
  display: flex;
  justify-content: center;
  font-size: 18px;
}
.card-format-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.quotes {
  display: flex;
  justify-content: center;
  background-color: #e5e7eb;
}

.header-top-container {
  display: flex;
  padding-top: 15px;
  margin-bottom: 130px;
}
.header-top-container ul {
  margin-left: auto;
}
.header-content {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 30px;
  margin-bottom: 130px;
}
.img-container {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: grey;
  width: 560px;
  height: 242px;
}

ul {
  margin: 0;
  padding: 0;
  list-style: none;
  display: flex;
  gap: 15px;
}

.header-link {
  padding: 0 10px 0 0;
}
.header-link:last-child {
  padding: 0;
}

.header-logo {
  color: #f9faf8;
  font-weight: 900;
  margin-right: auto;
  font-size: 24px;
}

.hero-header {
  font-size: 48px;
  font-weight: 900;
  width: 500px;
}
.secondary-text {
  color: #e5e7eb;
  font-size: 18px;
  width: 460px;
  margin-bottom: 10px;
}

.img-container p {
}

button {
  background-color: #3882f6;
  color: #f9faf8;
  border: none;
  border-radius: 8px;
  padding: 6px 33px;
  font-weight: bold;
  font-size: 18px;
}

.card-information {
  font-size: 36px;
  color: #1f2937;
  font-weight: 800;
  text-align: center;
  margin-bottom: 50px;
  padding-top: 50px;
}

.quotes {
  height: 430px;
}
.quotes-inner-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 790px;
}
.main-quote {
  font-size: 36px;
  font-style: italic;
  font-weight: 300;
  color: #1f2937;
}
.main-author {
  color: #1f2937;
  font-weight: bold;
  font-size: 24px;
  align-self: flex-end;
  margin-right: 40px;
}
.card-container {
  display: flex;
  justify-content: center;
  gap: 15px;
  margin-bottom: 140px;
}
.card {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 200px;
}
.card-border {
  width: 150px;
  height: 150px;
  border: 3.5px solid #3882f6;
  margin-bottom: 7px;
  border-radius: 9px;
}
.card > p {
  color: rgba(56, 56, 56, 0.85);
  width: 150px;
  text-align: center;
}

.cta-background {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 353px;
}
.cta-content-container {
  display: flex;

  align-items: center;
  justify-content: center;
  gap: 160px;
}
.call-to-action {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: #3882f6;
  width: 1024px;
  height: 157px;
  border-radius: 6px;
}
.text-container {
}
.cta-header {
  color: #f9faf8;
  font-weight: bold;
  font-size: 26px;
}

.cta-text {
  color: #e5e7eb;
  font-size: 18px;
}
.cta-button {
  border: solid 2.6px #e5e7eb;

  font-weight: 300px;
  align-self: flex-end;
}
footer {
  display: flex;
  background-color: #1f2937;
  color: #e5e7eb;
  justify-content: center;
  align-items: center;
  height: 100px;
  font-size: 18px;
}

